# rsMCMC

./: Ability.py  LICENSE  README.md  SelfParam.py  TargetParam.py  calcAbilityDmg.py  calcDmg.py  calcHitChance.py  calcSequenceDamage.py  damagePlot.py  generateSequence.py  getInputs.py  main.py  makeAbilities.py  mcStep.py  mcmc.py  pyproject.toml  setup.cfg
calcs/: calcAbilityDmg.py  calcDmg.py  calcSequenceDamage.py
classes/: Ability.py  SelfParam.py  TargetParam.py
src/: main.py
src/calcs/: calcAbilityDmg.py  calcDmg.py  calcHitChance.py  calcSequenceDamage.py
src/mc-tools/: generateSequence.py  mcmc.py
