[metadata]
name = "rsMCMC"
version = "0.0.1"
description = "Markov Chain Monte Carlo optimization of RuneScape 3 damage rotations."
author = "Jordan Sheely"
license = "MIT"
long_description = file: README.md
url = "https://github.com/astrojord/rsMCMC"

classifiers = 
Programming Language :: Python :: 3
License :: MIT License
Operating System :: Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >3.6
install_requires =
    numpy, sys

[options.packages.find]
where = src